ingress/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: load-balancer
  namespace: default
  annotations:
    kubernetes.io/ingress.global-static-ip-name: shinchokunote-ip
    cert-manager.io/cluster-issuer: letsencrypt-production
spec:
  tls:
    - secretName: beta-shinchoku-net-cert
      hosts:
      - beta.shinchoku.net
  rules:
    - host: beta.shinchoku.net
      http:
        paths:
          - backend:
              serviceName: rails
              servicePort: 80
